added simple menu & basic pizza card

--- a/src/components/controlls/controlls.css
+++ b/src/components/controlls/controlls.css
@@ -1,19 +1,27 @@
-.custom-buttons{
+.custom-buttons {
     background-color: white;
     color: black;
     margin: 15px;
-    border: black solid 2px;
+    border: black solid 1px;
     padding: 15px;
 }
+
 /* TODO - fix button on active - when is clicked */
-.custom-buttons:hover{
+
+.custom-buttons:hover {
     background-color: gray;
-    border: black solid 2px;
+    border: black solid 1px;
 }
 
-.pizza-size:hover{
+.custom-buttons:focus {
+    background-color: black;
+    color: white;
+}
+
+.pizza-size:hover {
     background-color: black;
 }
-.add{
-    background-color: #F5C684;
+
+.add {
+    background-color: #FFD8B9;
 }
