--- a/src/components/menu/menuItem.css
+++ b/src/components/menu/menuItem.css
@@ -13,24 +13,37 @@
     background-color: #FFD8B9;
 }
 .pizza-card .pizza-desc{
-    /* padding: 40px 10px; */
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    /* display: none; */
-    /* visibility: hidden; */
-}
-.pizza-card:hover .pizza-desc{
-    /* display: block; */
-    /* visibility: hidden; */
 }
 
+.pizza-card h1{
+    font-size: 6vw;
+}
 
 .pizza-img {
     max-width: 100%;
     height: auto;
     padding: 10px;
 }
+
+  @media screen and (max-width: 992px) {
+    .pizza-card .pizza-desc{
+        font-size: 2.5vw;
+    }
+  }
+  @media screen and (min-width: 992px) {
+    .pizza-card .pizza-desc {
+        font-size: 1.7vw;
+
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    .pizza-card .pizza-desc {
+        font-size: 1.4vw;
+    }
+  }
