--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,48 +6,32 @@
     z-index: 3;
     position: fixed;
     border-bottom: grey solid 1px;
+    font-size: 20px;
     /* Set the navbar to fixed position */
     top: 0;
     /* Position the navbar at the top of the page */
 }
 
 .nav-bar .left-nav {
-    margin-top: 20px;
+    margin-top: 22px;
+    margin-left: 40px;
     display: inline-block;
     float: left;
-    font-size: 17px;
-    margin-left: 40px;
-}
-
-.nav-bar .left-nav p {
-    display: inline;
-}
-
-/*left-nav high and interline manipulation */
-
-.nav-bar .left-nav {
     position: relative;
 }
 
+.nav-bar .left-nav .nav-avatar{
+    width: 50px;
+    position: relative;
+    bottom: 3px;
+    right: 10px;
+}
+
 .nav-bar .right-nav {
-    margin-top: 20px;
+    margin-top: 22px;
     margin-right: 40px;
-    float: right;
     display: inline-block;
-}
-
-.nav-bar .right-nav p {
-    color: black;
-    display: inline;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 17px;
-    font-weight: 600;
-    margin-left: 10px;
-}
-
-/*right-nav high and interline manipulation */
-
-.nav-bar .right-nav {
+    float: right;
     position: relative;
 }
+
