clean up, basket bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   font-weight: 900;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Kodchasan', sans-serif;
+
 }
 
 * {
