--- a/src/components/welcomePage/welcomePage.css
+++ b/src/components/welcomePage/welcomePage.css
@@ -10,6 +10,6 @@
     background-color: black;
 }
 
-/* .pizza-size:hover{
-    background-color: black;
-} */
+.welcome-page {
+    margin-top: 100px;
+}
