--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
   font-weight: 900;
-  font-family: 'Kodchasan', sans-serif;
-
+  font-family: 'Montserrat Alternates', sans-serif;
 }
 
 * {
