--- a/src/components/menu/menuItem.css
+++ b/src/components/menu/menuItem.css
@@ -17,6 +17,7 @@
     background-color: #FFD8B9;
 }
 .pizza-card .pizza-desc{
+    padding: 0; 
     margin: 0;
     position: absolute;
     top: 50%;
@@ -38,6 +39,7 @@
   @media screen and (max-width: 992px) {
     .pizza-card .pizza-desc{
         font-size: 2.5vw;
+        
     }
   }
   @media screen and (min-width: 992px) {
