payment tenatatively finished

--- a/src/components/payment/payment.css
+++ b/src/components/payment/payment.css
@@ -1,4 +1,4 @@
-.payment-main{
+.payment-main {
     margin-top: 120px;
 }
 
@@ -8,11 +8,35 @@
     margin: 10px;
 }
 
-.order-list ul li{
+.order-list ul li {
     list-style-type: none;
     padding: 10px;
 }
 
-.payment-img{
+.payment-img {
     width: 15vw;
-} 
+}
+
+#paymentForm-wrapper input {
+    width: 30vw;
+    padding: 10px;
+    border: grey 1px solid;
+    border-radius: 25px;
+    display: block;
+    margin: 15px auto;
+}
+
+.paymentForm {
+    text-align: center;
+    margin: 40px 0;
+}
+
+.card-wrapper {
+    margin: 0 auto;
+    width: 50%;
+    /* border: violet 2px dotted; */
+}
+
+.blik-wrapper{
+    color: black;
+}
