--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  font-weight: 900;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-weight: 500;
+  font-family: 'Lato', sans-serif;
 }
 
 * {
