--- a/src/components/basket/basket.css
+++ b/src/components/basket/basket.css
@@ -1,16 +1,63 @@
 
 .basket-wrapper {
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .basket-item {
     border: grey solid 1px;
-    border-radius: 50px;
+    border-radius: 25px;
     margin: 10px;
+    height: 100px;
+}
+
+.basket-item .pizza-img{
+    margin-top: 8px;
+    float: left;
+    width: 80px;
+}
+.basket-item .pizza-desc{
+    font-weight: 900;
+    font-size: 28px;
+    margin-top: 10px;
+    float: left;
+    margin-left: 40px;
+}
+
+.basket-item .pizza-desc .pizza-size{
+    text-align: left;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.basket-item .pizza-price{
+    float: right;
+    margin-top: 35px;
+    margin-right: 5vw;
+    /* border: red dotted 5px; */
+}
+
+.basket-item .right .delete-button{
+    margin-top: 20px;
+    font-size: 30px;
+    float: right;
+    min-width: 50px;
+    width: 8vw;
+    height: 100%;
+    /* border: black dotted 5px; */
+}
+.basket-item .delete-button:hover{
+    font-weight: 900;
 }
 
 .basket-item:hover {
     background-color: #FFD8B9;
+}
+
+/* BAKET SUMMARY */
+.basket-wrapper .summary{
+    /* width: 100px; */
+    margin: 40px;
+    text-align: right;
 }
 
 /* BAR */
