--- a/src/components/controlls/controlls.css
+++ b/src/components/controlls/controlls.css
@@ -4,6 +4,8 @@
     margin: 15px;
     border: black solid 1px;
     padding: 15px;
+    font-weight: 700;
+    /* font-size: 0.9em; */
 }
 
 /* TODO - fix button on active - when is clicked */
