--- a/src/components/basket/basket.css
+++ b/src/components/basket/basket.css
@@ -1,4 +1,3 @@
-
 .basket-wrapper {
     margin-top: 100px;
 }
@@ -54,7 +53,7 @@
 }
 
 /* BAKET SUMMARY */
-.basket-wrapper .summary{
+.summary{
     /* width: 100px; */
     margin: 40px 10px;
     text-align: right;
