new images, button shadow, delete item from basket fixed, payment succes component added

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,78 +1,19 @@
-.form-wraper {
-    margin-top: 150px;
-}
-
-:root {
-    --orange: #f2a161;
-    --orange2: #d68647;
-    --gray: #F2F2F2;
-    --white: #fff;
-}
-
-.form__group {
-    position: relative;
+.custom-buttons{
+    background-color: white;
+    color: black;
+    margin: 15px;
+    border: grey solid 1px;
     padding: 15px;
-    margin: 20px;
-    /* width: 50%; */
-    border: 1px red solid;
+}
+/* TODO - fix button on active - when is clicked */
+.custom-buttons:hover{
+    background-color: black;
+}
+.form-wrapper{
+    margin-top: 120px;
 }
 
-.form__field {
-    font-family: inherit;
-    width: 100%;
-    border: 0;
-    border-bottom: 2px solid var(--gray);
-    outline: 0;
-    font-size: 1.3rem;
-    color: #000000;
-    padding: 7px 0;
-    background: transparent;
-    transition: border-color 0.2s;
-}
-
-.form__field::placeholder {
-    color:  #d68647;
-}
-
-.form__field:placeholder-shown .form__label {
-    font-size: 1.3rem;
-    cursor: text;
-    top: 20px;
-}
-
-.form__label {
-    position: absolute;
-    top: 0;
+.custom-form{
     display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color: var(--gray);
 }
 
-.form__field:focus {
-    padding-bottom: 6px;
-    font-weight: 700;
-    border-width: 3px;
-    border-image: linear-gradient(to right, var(--orange), var(--grey));
-    border-image-slice: 1;
-}
-
-.form__field:focus .form__label {
-    position: absolute;
-    top: 0;
-    display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color: var(--orange);
-    font-weight: 700;
-}
-
-/* reset input */
-
-.form__field:required {
-    box-shadow: none;
-}
-
-.form__field:invalid {
-    box-shadow: none;
-}
