--- a/src/components/basket/basket.css
+++ b/src/components/basket/basket.css
@@ -4,17 +4,21 @@
 
 .basket-item {
     border: grey solid 1px;
-    border-radius: 25px;
+    border-radius: 50px;
     margin: 10px;
     height: 100px;
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.25); 
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.25);
 }
 
-.basket-item .pizza-img{
+.basket-item .pizza-img {
+    margin-left: 10px;
     margin-top: 8px;
     float: left;
     width: 80px;
 }
-.basket-item .pizza-desc{
+
+.basket-item .pizza-desc {
     font-weight: 900;
     font-size: 28px;
     margin-top: 10px;
@@ -22,20 +26,20 @@
     margin-left: 40px;
 }
 
-.basket-item .pizza-desc .pizza-size{
+.basket-item .pizza-desc .pizza-size {
     text-align: left;
     font-weight: 500;
     font-size: 18px;
 }
 
-.basket-item .pizza-price{
+.basket-item .pizza-price {
     float: right;
     margin-top: 35px;
     margin-right: 5vw;
     /* border: red dotted 5px; */
 }
 
-.basket-item .right .delete-button{
+.basket-item .right .delete-button {
     margin-top: 25px;
     font-size: 25px;
     float: right;
@@ -44,7 +48,8 @@
     height: 100%;
     /* border: black dotted 5px; */
 }
-.basket-item .delete-button:hover{
+
+.basket-item .delete-button:hover {
     font-weight: 700;
 }
 
@@ -53,7 +58,8 @@
 }
 
 /* BAKET SUMMARY */
-.summary{
+
+.summary {
     /* width: 100px; */
     margin: 40px 10px;
     text-align: right;
@@ -62,6 +68,7 @@
 }
 
 /* BAR */
+
 .basket-bar {
     height: 80px;
     width: 100vw;
@@ -75,24 +82,25 @@
     padding: 10px;
     /* Set the navbar to fixed position */
     bottom: 0;
+
     /* Position the navbar at the top of the page */
 }
 
 .basket-bar-item {
     float: left;
     margin: 10px;
+    font-size: 16px;
 }
 
-.basket-bar .pizza-img {
-    width: 50px;
-    height: 50px;
+.basket-bar-item .pizza-img {
+    position: relative;
+    bottom: 14px;
+    width: 70px;
+    height: 70px;
 }
 
-.basket-bar .bar-button{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    right: 50px;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+.basket-bar-item .titile {
+    position: relative;
+    bottom: 13px;
+    font-size: 20px;
 }
