--- a/src/components/controlls/controlls.css
+++ b/src/components/controlls/controlls.css
@@ -6,6 +6,8 @@
     padding: 15px;
     font-weight: 700;
     /* font-size: 0.9em; */
+    -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10); 
+    box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10);
 }
 
 /* TODO - fix button on active - when is clicked */
