--- a/src/components/menu/menuItem.css
+++ b/src/components/menu/menuItem.css
@@ -1,16 +1,14 @@
 .pizza-card {
     border: #CDCCC8 1px solid;
     background-color: #F2F2F2;
-    margin: 10px;
+    margin: 20px 10px;
     padding: 15px;
-    border-radius: 50px;
+    border-radius: 100px;
     overflow: hidden;
     align-items: center;
     position: relative;
-}
-
-.pizza-card:last-child {
-    margin-bottom: 120px;
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.25); 
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.25);
 }
 
 .pizza-card:hover {
