--- a/src/components/payment/payment.css
+++ b/src/components/payment/payment.css
@@ -24,12 +24,36 @@
     margin: 40px 0;
 }
 
+.paymentForm input{
+    -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10); 
+    box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10);
+}
+
 .card-wrapper {
     margin: 0 auto;
     width: 50%;
 }
 
+
 .blik-wrapper{
     color: black;
 }
 
+.success-wrapper{
+    padding: 40px;
+    margin-top: 120px;
+}
+
+.success-wrapper .image{
+    width: 200px;
+    margin-bottom: 100px;
+}
+
+.success-wrapper h1{
+    font-size: 50px;
+}
+
+.success-wrapper h4{
+    margin-top: 60px;
+    font-size: 22px;
+}
