--- a/src/components/welcomePage/welcomePage.css
+++ b/src/components/welcomePage/welcomePage.css
@@ -13,3 +13,9 @@
 .welcome-page {
     margin-top: 100px;
 }
+
+
+.welcome-page input{
+    -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10); 
+    box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10);
+}
