--- a/src/components/controlls/controlls.css
+++ b/src/components/controlls/controlls.css
@@ -22,3 +22,9 @@
     color: white;
 }
 
+@media screen and (max-width: 600px) {
+    .custom-buttons{
+        padding: 10px;
+        margin: 5px;
+    }
+  }
