--- a/src/components/payment/payment.css
+++ b/src/components/payment/payment.css
@@ -33,10 +33,14 @@
     -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10); 
     box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.10);
 }
+.paymentForm{
+    padding: 0;
+}
 
-.card-wrapper {
-    margin: 0 auto;
-    width: 50%;
+.card-wrapper .paymentForm input{
+    margin: 10px;
+    width: 100%;
+
 }
 
 
